Entity Oluşturmasına Başlandı

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WebECommerce;Port=5432;User Id=postgres;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
